--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
+            <script src="main.js"></script>
 
     </head>
 
@@ -223,7 +224,7 @@
                                                 <div class="col-xs-9 text-right">
                                                     <h3>Lead Time</h3>
                                                     <div class="form-group">
-                                                        <input class="form-control" type="number">
+                                                        <input class="form-control" type="number" id="leadtime">
                                                     </div>
                                                 </div>
                                             </div>
@@ -302,7 +303,7 @@
                             </div>
 
                                     <div class="col-lg-6">
-                                    <button type="button" class="btn btn-warning btn-lg" onclick="reload()">Analizar horizonte</button>
+                                    <button type="button" class="btn btn-warning btn-lg" onclick="run()">Analizar horizonte</button>
                                     </div>
                         </div>
                         <!-- /.row -->
@@ -327,6 +328,8 @@
             <script src="js/plugins/morris/morris.min.js"></script>
             <script src="js/plugins/morris/morris-data.js"></script>
             <script src="view.js"></script>
+            
+            <!-- Código heurísticas JavaScript -->
 
         </body>
 
