--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                                 <div class="col-xs-9 text-right">
                                                     <h3># Periodos</h3>
                                                     <div class="form-group">
-                                                        <input class="form-control"  type="number" id="numPeriodos">
+                                                        <input class="form-control"  type="number" id="numPeriodos" hidden="true">
                                                     </div>                                    
                                                 </div>
                                             </div>
@@ -88,7 +88,7 @@
                                                 <div class="col-xs-9 text-right">
                                                     <h3>Lead Time</h3>
                                                     <div class="form-group">
-                                                        <input class="form-control" type="number" id="leadtime">
+                                                        <input class="form-control" type="number" id="leadtime" hidden="true">
                                                     </div>
                                                 </div>
                                             </div>
@@ -98,7 +98,7 @@
 
                                 <div class="col-lg-3 col-md-6">
                                     <div class="row">
-                                        <button type="button" class="btn btn-success btn-lg" onclick="generarCasillas()">Definir horizonte de planeación</button> </div>
+                                        <button type="button" class="btn btn-success btn-lg" id="botonVerde" onclick="generarCasillas()">Definir horizonte de planeación</button> </div>
                                         <div class="row">
                                             <p> </p>
                                             <p>
