--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                                 <div class="col-xs-9 text-right">
                                                     <h3># Periodos</h3>
                                                     <div class="form-group">
-                                                        <input class="form-control"  type="number" id="numPeriodos" hidden="true">
+                                                        <input class="form-control"  type="number" id="numPeriodos">
                                                     </div>                                    
                                                 </div>
                                             </div>
@@ -88,7 +88,7 @@
                                                 <div class="col-xs-9 text-right">
                                                     <h3>Lead Time</h3>
                                                     <div class="form-group">
-                                                        <input class="form-control" type="number" id="leadtime" hidden="true">
+                                                        <input class="form-control" type="number" id="leadtime">
                                                     </div>
                                                 </div>
                                             </div>
@@ -114,7 +114,7 @@
 
                                 <!-- /.row -->
 
-                                <div class="col-lg-12" id="dataEntrada1">
+                                <div class="col-lg-12" id="dataEntrada1" hidden="true">
                                     <div class="panel panel-default">
                                         <div class="panel-heading">
                                             <h3 class="panel-title"><i class="fa fa-clock-o fa-fw"></i> Parámetros por periodo</h3>
@@ -174,7 +174,7 @@
      
                                 <!-- /.row -->
 
-                                <div class="row" id="dataResultados1">
+                                <div class="row" id="dataResultados1" hidden="true">
                                 <!--De aca -->
                                    <div class="col-lg-6">
                                     <div class="panel panel-default">
